# cloud-run-mlops-template

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  gcp.sh  pyproject.toml
.github/workflows/: build_test_api.yaml  deploy.yaml  test_service.yaml
.github/workflows/data/: .env  cloudrun.service.template.yaml
app/: funs.py  main.py
app/data/: ml_model.joblib  pydantic_model.py  sample_url_params.txt  test_data.json
mlmodel/: build_ml_model.ipynb
tests/: test_app.py
